--- a/app/src/main/res/layout/activity_encrypt.xml
+++ b/app/src/main/res/layout/activity_encrypt.xml
@@ -8,7 +8,7 @@ android:layout_height="match_parent"  tools:context=".EncryptActivity">
     android:layout_height="wrap_content"
     android:id="@+id/in_date"
     android:layout_marginTop="45dp"
-    android:layout_below="@+id/button2"
+    android:layout_below="@+id/btnatt"
     android:layout_alignParentStart="true" />
 
 <Button
@@ -36,7 +36,7 @@ android:layout_height="match_parent"  tools:context=".EncryptActivity">
     android:layout_alignEnd="@+id/btn_date" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btnatt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Attach Data to Encrypt"
