--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,33 +6,42 @@
     android:layout_height="match_parent"
     tools:context="com.procleaus.tea.MainActivity">
 
-       <LinearLayout
-            android:layout_width="368dp"
-            android:layout_height="495dp"
-            android:orientation="vertical"
-            tools:layout_editor_absoluteY="8dp"
-            tools:layout_editor_absoluteX="8dp">
+    <LinearLayout
+        android:layout_width="368dp"
+        android:layout_height="495dp"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="6dp"
+        tools:layout_editor_absoluteY="8dp">
 
-           <Button
-               android:id="@+id/btn_e"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:layout_gravity="center_horizontal"
-               android:layout_marginTop="100dp"
-               android:onClick="btneonclick"
-               android:text="Encrypt" />
+        <Button
+            android:id="@+id/btn_e"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="100dp"
+            android:onClick="btneonclick"
+            android:text="TT-Encrypt" />
 
-           <Button
-               android:id="@+id/btn_d"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:layout_below="@id/btn_e"
-               android:layout_gravity="center_horizontal"
-               android:layout_marginTop="100dp"
-               android:onClick="btndoclick"
-               android:text="Decrypt" />
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="100dp"
+            android:onClick="btn2eonclick"
+            android:text="S-Encrypt" />
 
-        </LinearLayout>
+        <Button
+            android:id="@+id/btn_d"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/btn_e"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="100dp"
+            android:onClick="btndoclick"
+            android:text="Decrypt" />
+
+    </LinearLayout>
 
 
 </android.support.constraint.ConstraintLayout>
