Added Time Tied Encryption Activity

--- a/app/src/main/res/layout/activity_encrypt.xml
+++ b/app/src/main/res/layout/activity_encrypt.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent"  tools:context=".EncryptActivity" android:orientation="vertical"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".EncryptActivity" android:orientation="vertical"
     android:weightSum="1" android:gravity="center_horizontal">
 
     <Button
@@ -50,14 +52,30 @@
         android:layout_marginTop="30dp"
         android:text="SELECT TIME" />
 
-    <CheckBox
-        android:id="@+id/checkBox"
-        android:layout_width="wrap_content"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/layout_password"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Allow future Modification"
-        android:layout_marginTop="15dp"
-        android:layout_below="@+id/btn_time"
-        android:layout_centerHorizontal="true" />
+        android:textColorHint="@color/colorHint"
+        app:passwordToggleDrawable="@drawable/ic_visibility_black_24dp"
+        app:passwordToggleEnabled="true"
+        android:layout_marginTop="26dp"
+        android:layout_below="@+id/btnatt2"
+        android:layout_alignParentStart="true">
+
+        <EditText
+            android:id="@+id/editTextPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/checkBox"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="64dp"
+            android:hint="@string/hint_password"
+            android:inputType="textPassword"
+            android:textColor="@color/textColor"
+            />
+
+    </android.support.design.widget.TextInputLayout>
 
     <Button
         android:id="@+id/btn_eit"
