--- a/app/src/main/res/layout/activity_api.xml
+++ b/app/src/main/res/layout/activity_api.xml
@@ -13,6 +13,14 @@
         android:layout_marginTop="50dp"
         android:onClick="encryptPOST"/>
 
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="id" />
+
     <Button
         android:id="@+id/btn2"
         android:layout_width="wrap_content"
